[gd_scene load_steps=2 format=2]

[ext_resource path="res://interface/Interface.gd" type="Script" id=1]

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -32.0
margin_top = -113.0
margin_right = 21.0
margin_bottom = -58.0
custom_colors/font_color = Color( 0.117647, 0.0980392, 0.0980392, 1 )
custom_constants/shadow_offset_x = 0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.0431373, 0.0352941, 0.0352941, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -34.5
margin_right = 76.0
margin_bottom = 34.5
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MsgTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MsgTimer" to="." method="_on_MsgTimer_timeout"]
